[fix] nav link unpoen but invisible display on screen problem

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -83,7 +83,7 @@
   &__link {
     &:link,
     &:visited {
-      display: inline-block;
+      display: none;
       font-size: 3rem;
       font-weight: 300;
       padding: 1rem 2rem;
@@ -121,6 +121,10 @@
   &__checkbox:checked ~ &__nav {
     opacity: 1;
     width: 100%;
+  }
+
+  &__checkbox:checked ~ &__nav &__list &__item &__link {
+    display: inline-block;
   }
 
   //ICON
